--- a/models/apache160.html
+++ b/models/apache160.html
@@ -3,66 +3,68 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TVS Apache RTR 160 4V | Racing DNA</title>
+    <title>TVS Apache RTR 160 4V | Tirumala TVS</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
 
-    <header>
-        <div class="nav-container">
-            <a href="../index.html" class="logo"><h1>Tirumala <span>TVS</span></h1></a>
-            <nav><ul class="nav-links"><li><a href="../index.html">Home</a></li><li><a href="../models.html">Inventory</a></li><li><a href="../contacts.html">Service</a></li></ul></nav>
+    <nav class="nav-container">
+        <a href="../index.html" class="logo"><h1>Tirumala <span>TVS</span></h1></a>
+        <div class="nav-links">
+            <a href="../index.html">Home</a>
+            <a href="../models.html">Inventory</a>
+            <a href="../contacts.html" style="color: var(--tvs-red);">Book Test Ride</a>
         </div>
-    </header>
+    </nav>
 
     <section class="model-hero">
         <div class="hero-text">
-            <span style="background: var(--tvs-red); color: white; padding: 5px 10px; font-size: 0.8rem; border-radius: 4px; font-weight: bold;">RACE MACHINE</span>
+            <span class="hero-tag" style="background: #d3161c;">RACING DNA</span>
             <h1>Apache RTR 160 4V</h1>
             <h3>The Unstoppable</h3>
             <p>
-                The most powerful 160cc bike in its class. Born from the racetrack, 
-                it features Ride Modes, GTT, and SmartXonnect technology.
+                The most powerful 160cc bike in its class. Born on the racetrack, 
+                it features segment-first Ride Modes and SmartXonnect technology.
             </p>
-            <div style="display: flex; gap: 15px;">
-                <a href="../contacts.html" class="hero-btn">📅 Book Test Ride</a>
-                <a href="https://wa.me/919964946512" class="btn-outline">💬 WhatsApp</a>
+            <div class="hero-btns">
+                <a href="../contacts.html" class="btn-primary">📅 Book Test Ride</a>
+                <a href="https://wa.me/919964946512" class="btn-secondary">💬 WhatsApp</a>
             </div>
         </div>
         <div class="hero-image">
-            <img src="../assets/apache160.jpg" alt="Apache 160 4V">
+            <img src="../assets/apache160.jpg" alt="Apache 160" onerror="this.src='https://placehold.co/800x600?text=Apache+160'">
         </div>
     </section>
 
     <div class="stats-bar">
-        <div class="stat-item"><h4>159.7 cc</h4><span>Engine</span></div>
-        <div class="stat-item"><h4>17.55 PS</h4><span>Max Power</span></div>
-        <div class="stat-item"><h4>3 Modes</h4><span>Ride Modes</span></div>
-        <div class="stat-item"><h4>Single ABS</h4><span>Safety</span></div>
+        <div class="stat-box"><h4>17.55 PS</h4><p>Max Power</p></div>
+        <div class="stat-box"><h4>3 Modes</h4><p>Ride Modes</p></div>
+        <div class="stat-box"><h4>159.7 cc</h4><p>Oil Cooled</p></div>
+        <div class="stat-box"><h4>ABS</h4><p>Super Moto</p></div>
     </div>
 
-    <section>
-        <h2 class="section-title">Racing Features</h2>
+    <section class="info-section">
+        <div class="section-head"><h2>Track Tech</h2></div>
         <div class="features-grid">
-            <div class="feature-card"><span class="feature-icon">🏎</span><h4>3 Ride Modes</h4><p>Sport, Urban, and Rain modes to adapt to any road condition.</p></div>
-            <div class="feature-card"><span class="feature-icon">💡</span><h4>LED Headlamp</h4><p>Aggressive styling with new LED Daytime Running Lights (DRL).</p></div>
-            <div class="feature-card"><span class="feature-icon">📱</span><h4>SmartXonnect</h4><p>Race telemetry, lean angle mode, and crash alert system.</p></div>
-            <div class="feature-card"><span class="feature-icon">🍩</span><h4>Super Moto ABS</h4><p>Single Channel Super Moto ABS for ultimate braking control.</p></div>
+            <div class="feature-card"><span class="feature-icon">🏎</span><h4>Ride Modes</h4><p>Switch between Sport, Urban, and Rain modes on the fly.</p></div>
+            <div class="feature-card"><span class="feature-icon">💡</span><h4>LED Headlamp</h4><p>Aggressive new styling with signature LED DRL.</p></div>
+            <div class="feature-card"><span class="feature-icon">📱</span><h4>SmartXonnect</h4><p>Race telemetry, Lean Angle Mode, and Crash Alert.</p></div>
+            <div class="feature-card"><span class="feature-icon">💨</span><h4>GTT</h4><p>Glide Through Traffic for easy low-speed riding.</p></div>
         </div>
     </section>
 
-    <section style="background-color: var(--light-grey); padding-top: 60px;">
-        <h2 class="section-title">Technical Specs</h2>
-        <div class="specs-grid">
-            <div class="spec-box"><span class="spec-icon">⚙️</span><div class="spec-label">Engine</div><div class="spec-value">159.7 cc, 4V</div></div>
-            <div class="spec-box"><span class="spec-icon">🐎</span><div class="spec-label">Power</div><div class="spec-value">17.55 PS</div></div>
-            <div class="spec-box"><span class="spec-icon">🛢</span><div class="spec-label">Fuel Tank</div><div class="spec-value">12 Liters</div></div>
-            <div class="spec-box"><span class="spec-icon">⚖️</span><div class="spec-label">Weight</div><div class="spec-value">144 kg</div></div>
-            <div class="spec-box"><span class="spec-icon">🕹</span><div class="spec-label">Gears</div><div class="spec-value">5 Speed</div></div>
-            <div class="spec-box"><span class="spec-icon">🛑</span><div class="spec-label">Brakes</div><div class="spec-value">Disc ABS</div></div>
+    <section class="info-section" style="background-color: #f9f9f9;">
+        <div class="section-head"><h2>Technical Specifications</h2></div>
+        <div class="specs-container">
+            <div class="spec-row"><div class="spec-key">Engine</div><div class="spec-val">159.7 cc, 4-Valve, Oil Cooled</div></div>
+            <div class="spec-row"><div class="spec-key">Power</div><div class="spec-val">17.55 PS @ 9250 rpm</div></div>
+            <div class="spec-row"><div class="spec-key">Torque</div><div class="spec-val">14.73 Nm @ 7250 rpm</div></div>
+            <div class="spec-row"><div class="spec-key">Weight</div><div class="spec-val">144 kg</div></div>
+            <div class="spec-row"><div class="spec-key">Fuel Tank</div><div class="spec-val">12 Liters</div></div>
+            <div class="spec-row"><div class="spec-key">Brakes</div><div class="spec-val">Disc/Disc (ABS)</div></div>
         </div>
     </section>
 
-    <footer><div class="footer-bottom"><p>&copy; 2024 Tirumala TVS Bidarahalli.</p></div></footer>
+    <footer><p>&copy; 2024 Tirumala TVS Bidarahalli.</p></footer>
 </body>
 </html>
