--- a/models/iqube.html
+++ b/models/iqube.html
@@ -3,64 +3,67 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TVS iQube Electric | Smart. Silent.</title>
+    <title>TVS iQube Electric | Tirumala TVS</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
 
-    <header>
-        <div class="nav-container">
-            <a href="../index.html" class="logo"><h1>Tirumala <span>TVS</span></h1></a>
-            <nav><ul class="nav-links"><li><a href="../index.html">Home</a></li><li><a href="../models.html">Inventory</a></li><li><a href="../contacts.html">Service</a></li></ul></nav>
+    <nav class="nav-container">
+        <a href="../index.html" class="logo"><h1>Tirumala <span>TVS</span></h1></a>
+        <div class="nav-links">
+            <a href="../index.html">Home</a>
+            <a href="../models.html">Inventory</a>
+            <a href="../contacts.html" style="color: var(--tvs-red);">Book Test Ride</a>
         </div>
-    </header>
+    </nav>
 
     <section class="model-hero">
         <div class="hero-text">
-            <span style="background: #25D366; color: white; padding: 5px 10px; font-size: 0.8rem; border-radius: 4px; font-weight: bold;">ELECTRIC</span>
-            <h1>TVS iQube Electric</h1>
-            <h3>The #1 Family EV</h3>
+            <span class="hero-tag" style="background: #25D366;">ELECTRIC</span>
+            <h1>TVS iQube</h1>
+            <h3>Smart. Simple. Silent.</h3>
             <p>
-                Switch to electric without compromise. 
-                With a real-world range of 100km+ and a top speed of 78km/h, the iQube is perfect for daily city commutes.
+                The #1 family EV choice. With a real-world range of 100km+, top speed of 78km/h, 
+                and huge savings on fuel, it is the smartest way to commute.
             </p>
-            <div style="display: flex; gap: 15px;">
-                <a href="../contacts.html" class="hero-btn">📅 Book Test Ride</a>
-                <a href="https://wa.me/919964946512" class="btn-outline">💬 WhatsApp</a>
+            <div class="hero-btns">
+                <a href="../contacts.html" class="btn-primary">📅 Book Test Ride</a>
+                <a href="https://wa.me/919964946512" class="btn-secondary">💬 WhatsApp</a>
             </div>
         </div>
         <div class="hero-image">
-            <img src="../assets/iqube.jpg" alt="TVS iQube">
+            <img src="../assets/iqube.jpg" alt="TVS iQube" onerror="this.src='https://placehold.co/800x600?text=iQube+EV'">
         </div>
     </section>
 
     <div class="stats-bar">
-        <div class="stat-item"><h4>100 km</h4><span>Real Range</span></div>
-        <div class="stat-item"><h4>4 hrs 30</h4><span>Charge Time</span></div>
-        <div class="stat-item"><h4>78 km/h</h4><span>Top Speed</span></div>
-        <div class="stat-item"><h4>₹ 30k</h4><span>Yearly Savings</span></div>
+        <div class="stat-box"><h4>100 km</h4><p>Real Range</p></div>
+        <div class="stat-box"><h4>4.5 hrs</h4><p>Charging</p></div>
+        <div class="stat-box"><h4>78 km/h</h4><p>Top Speed</p></div>
+        <div class="stat-box"><h4>₹ 30k</h4><p>Yearly Savings</p></div>
     </div>
 
-    <section>
-        <h2 class="section-title">Smart Features</h2>
+    <section class="info-section">
+        <div class="section-head"><h2>Electric Intelligence</h2></div>
         <div class="features-grid">
-            <div class="feature-card"><span class="feature-icon">🔋</span><h4>Real Range</h4><p>100 km real-world range per charge (Eco Mode).</p></div>
-            <div class="feature-card"><span class="feature-icon">📱</span><h4>TFT Touchscreen</h4><p>7-inch dashboard with HMI controller (S/ST variants).</p></div>
-            <div class="feature-card"><span class="feature-icon">🔙</span><h4>Q-Park Assist</h4><p>Reverse mode for easy parking in tight spots.</p></div>
-            <div class="feature-card"><span class="feature-icon">🎒</span><h4>32L Storage</h4><p>Massive boot space that fits 2 helmets.</p></div>
+            <div class="feature-card"><span class="feature-icon">🔋</span><h4>Reliable Range</h4><p>Travel 100km on a single charge in Eco mode.</p></div>
+            <div class="feature-card"><span class="feature-icon">📱</span><h4>Touchscreen</h4><p>7-inch colour TFT dashboard with Joystick control.</p></div>
+            <div class="feature-card"><span class="feature-icon">🔙</span><h4>Q-Park Assist</h4><p>Reverse mode makes parking in tight spots effortless.</p></div>
+            <div class="feature-card"><span class="feature-icon">🎒</span><h4>32L Storage</h4><p>Massive boot space that fits 2 helmets comfortably.</p></div>
         </div>
     </section>
 
-    <section style="background-color: var(--light-grey); padding-top: 60px;">
-        <h2 class="section-title">Technical Specs</h2>
-        <div class="specs-grid">
-            <div class="spec-box"><span class="spec-icon">⚡</span><div class="spec-label">Motor Power</div><div class="spec-value">4.4 kW</div></div>
-            <div class="spec-box"><span class="spec-icon">⏱</span><div class="spec-label">Acceleration</div><div class="spec-value">0-40 in 4.2s</div></div>
-            <div class="spec-box"><span class="spec-icon">🔌</span><div class="spec-label">Charging</div><div class="spec-value">0-80% in 4.5 hrs</div></div>
-            <div class="spec-box"><span class="spec-icon">🛡</span><div class="spec-label">Warranty</div><div class="spec-value">3 Years</div></div>
+    <section class="info-section" style="background-color: #f9f9f9;">
+        <div class="section-head"><h2>Technical Specifications</h2></div>
+        <div class="specs-container">
+            <div class="spec-row"><div class="spec-key">Motor Power</div><div class="spec-val">4.4 kW Peak Power</div></div>
+            <div class="spec-row"><div class="spec-key">Acceleration</div><div class="spec-val">0-40 km/h in 4.2 seconds</div></div>
+            <div class="spec-row"><div class="spec-key">Charging Time</div><div class="spec-val">0-80% in 4 hours 30 mins</div></div>
+            <div class="spec-row"><div class="spec-key">Warranty</div><div class="spec-val">3 Years / 50,000 km</div></div>
+            <div class="spec-row"><div class="spec-key">Battery Rating</div><div class="spec-val">IP67 Water & Dust Resistance</div></div>
         </div>
     </section>
 
-    <footer><div class="footer-bottom"><p>&copy; 2024 Tirumala TVS Bidarahalli.</p></div></footer>
+    <footer><p>&copy; 2024 Tirumala TVS Bidarahalli.</p></footer>
 </body>
 </html>
