--- a/index.html
+++ b/index.html
@@ -10,13 +10,11 @@
 
     <div class="top-bar">
         <span>📍 Bidarahalli, Bangalore - 49</span>
-        <span>📞 +91 99649 46512 | tirumalatvs716@gmail.com</span>
+        <span>📞 +91 99649 46512</span>
     </div>
 
     <nav class="nav-container">
-        <a href="index.html" class="logo">
-            <h1>Tirumala <span>TVS</span></h1>
-        </a>
+        <a href="index.html" class="logo"><h1>Tirumala <span>TVS</span></h1></a>
         <div class="nav-links">
             <a href="index.html">Home</a>
             <a href="models.html">Inventory</a>
@@ -28,9 +26,7 @@
     <section class="hero">
         <h2>Experience the New TVS</h2>
         <p>Your Trusted Authorized Dealership in Bidarahalli, Bangalore.</p>
-        <div>
-            <a href="models.html" class="hero-btn">View Latest Bikes</a>
-        </div>
+        <a href="models.html" class="hero-btn">View Latest Bikes</a>
     </section>
 
     <div class="action-bar">
@@ -39,81 +35,62 @@
         <a href="contacts.html" class="action-btn">💬 General Enquiry</a>
     </div>
 
-    <section class="info-section">
-        <div class="section-head">
-            <h2>Welcome to Tirumala TVS</h2>
-            <p>Championing Progress | Industry Leader TVSM</p>
-        </div>
-        <div class="features-grid">
-             <div class="feature-card">
-                 <span class="feature-icon">🏆</span>
-                 <h4>50 Million+ Vehicles</h4>
-                 <p>Celebrating mobility and progress for countless people globally.</p>
-             </div>
-             <div class="feature-card">
-                 <span class="feature-icon">🌍</span>
-                 <h4>80+ Countries</h4>
-                 <p>A trusted brand with a global presence and legacy.</p>
-             </div>
-             <div class="feature-card">
-                 <span class="feature-icon">🏍</span>
-                 <h4>Vehicle for Everyone</h4>
-                 <p>Largest portfolio from Mopeds to Premium Racing Bikes.</p>
-             </div>
+    <section style="background-color: var(--tvs-red); color: white; padding: 80px 10%; text-align: center;">
+        <h2 style="font-size: 2.5rem; margin-bottom: 40px;">Why Choose Tirumala TVS?</h2>
+        <div style="display: flex; flex-wrap: wrap; justify-content: space-around; gap: 30px;">
+            <div style="flex: 1; min-width: 250px;">
+                <div style="font-size: 3rem; margin-bottom: 10px;">🏆</div>
+                <h3>100 Years of Trust</h3>
+                <p>Part of the TVS Motor Company legacy.</p>
+            </div>
+            <div style="flex: 1; min-width: 250px;">
+                <div style="font-size: 3rem; margin-bottom: 10px;">🌍</div>
+                <h3>Global Presence</h3>
+                <p>TVS is trusted in over 80 countries.</p>
+            </div>
+            <div style="flex: 1; min-width: 250px;">
+                <div style="font-size: 3rem; margin-bottom: 10px;">⚙️</div>
+                <h3>Expert Service</h3>
+                <p>Genuine parts and trained mechanics.</p>
+            </div>
         </div>
     </section>
 
     <section style="background-color: var(--light-grey);">
-        <h2 class="section-title">Latest Launches</h2>
+        <div class="section-head">
+            <h2>Latest Launches</h2>
+            <p>Check out the newest arrivals at our showroom</p>
+        </div>
         <div class="models-grid">
             <div class="model-card">
-                <img src="assets/zest.jpg" alt="Zest 110" onerror="this.src='https://placehold.co/600x400?text=Zest'">
-                <div class="model-info">
-                    <h3>TVS Zest 110</h3>
-                    <p>Live Full. Live Free. Best in class pickup.</p>
-                    <a href="models/zest110.html" class="btn-view">View Details</a>
-                </div>
-            </div>
-            
-            <div class="model-card">
-                <img src="assets/jupiter110.jpg" alt="Jupiter 110" onerror="this.src='https://placehold.co/600x400?text=Jupiter'">
+                <img src="assets/jupiter110.jpg" alt="Jupiter" onerror="this.src='https://placehold.co/600x400?text=Jupiter'">
                 <div class="model-info">
                     <h3>New TVS Jupiter 110</h3>
-                    <p>Now with iGO Assist technology.</p>
+                    <p>New 113cc Engine with iGO Assist.</p>
                     <a href="models/jupiter113.html" class="btn-view">View Details</a>
                 </div>
             </div>
-
             <div class="model-card">
                 <img src="assets/raider.jpg" alt="Raider" onerror="this.src='https://placehold.co/600x400?text=Raider'">
                 <div class="model-info">
                     <h3>TVS Raider 125</h3>
-                    <p>The wicked ride. Commuter of the year.</p>
+                    <p>The wicked ride. Best in class power.</p>
                     <a href="models/raider.html" class="btn-view">View Details</a>
+                </div>
+            </div>
+            <div class="model-card">
+                <img src="assets/zest.jpg" alt="Zest" onerror="this.src='https://placehold.co/600x400?text=Zest'">
+                <div class="model-info">
+                    <h3>TVS Zest 110</h3>
+                    <p>Lightweight and powerful.</p>
+                    <a href="models/zest110.html" class="btn-view">View Details</a>
                 </div>
             </div>
         </div>
     </section>
 
     <footer>
-        <div class="footer-container">
-            <div class="footer-col">
-                <h4>Tirumala TVS</h4>
-                <p>Authorized Main Dealer. Your trusted partner for Sales & Service.</p>
-            </div>
-            <div class="footer-col">
-                <h4>Quick Links</h4>
-                <ul>
-                    <li><a href="contacts.html">Book Service</a></li>
-                    <li><a href="contacts.html">Book Test Ride</a></li>
-                </ul>
-            </div>
-            <div class="footer-col">
-                <h4>Contact</h4>
-                <p>Bidarahalli, Bangalore - 49</p>
-                <p>+91 99649 46512</p>
-            </div>
-        </div>
+        <p>&copy; 2024 Tirumala TVS Bidarahalli.</p>
     </footer>
 
 </body>
