--- a/models.html
+++ b/models.html
@@ -24,55 +24,79 @@
         </div>
 
         <div class="models-grid">
+            
             <div class="model-card">
                 <img src="assets/zest.jpg" alt="Zest" onerror="this.src='https://placehold.co/600x400?text=Zest'">
                 <div class="model-info">
                     <h3>TVS Zest 110</h3>
+                    <p>110cc | Lightweight | 19L Storage</p>
                     <a href="models/zest110.html" class="btn-view">View Specs</a>
                 </div>
             </div>
+
             <div class="model-card">
-                <img src="assets/jupiter110.jpg" alt="Jupiter" onerror="this.src='https://placehold.co/600x400?text=Jupiter'">
+                <img src="assets/jupiter110.jpg" alt="Jupiter 110" onerror="this.src='https://placehold.co/600x400?text=Jupiter+110'">
                 <div class="model-info">
                     <h3>New TVS Jupiter 110</h3>
+                    <p>113cc | iGO Assist | Digital Cluster</p>
                     <a href="models/jupiter113.html" class="btn-view">View Specs</a>
                 </div>
             </div>
+
+            <div class="model-card">
+                <img src="assets/jupiter125.jpg" alt="Jupiter 125" onerror="this.src='https://placehold.co/600x400?text=Jupiter+125'">
+                <div class="model-info">
+                    <h3>TVS Jupiter 125</h3>
+                    <p>125cc | 2 Helmet Storage | Metal Body</p>
+                    <a href="models/jupiter125.html" class="btn-view">View Specs</a>
+                </div>
+            </div>
+
             <div class="model-card">
                 <img src="assets/raider.jpg" alt="Raider" onerror="this.src='https://placehold.co/600x400?text=Raider'">
                 <div class="model-info">
                     <h3>TVS Raider 125</h3>
+                    <p>125cc | TFT Display | 5.9s 0-60</p>
                     <a href="models/raider.html" class="btn-view">View Specs</a>
                 </div>
             </div>
+
             <div class="model-card">
                 <img src="assets/ntorq.jpg" alt="Ntorq" onerror="this.src='https://placehold.co/600x400?text=Ntorq'">
                 <div class="model-info">
                     <h3>TVS Ntorq 125</h3>
+                    <p>125cc | Bluetooth | Race Tuned</p>
                     <a href="models/ntorq125.html" class="btn-view">View Specs</a>
                 </div>
             </div>
+
             <div class="model-card">
                 <img src="assets/xl100.jpg" alt="XL100" onerror="this.src='https://placehold.co/600x400?text=XL100'">
                 <div class="model-info">
                     <h3>TVS XL100</h3>
+                    <p>Heavy Duty | Multi-Utility | i-Touch</p>
                     <a href="models/xl100.html" class="btn-view">View Specs</a>
                 </div>
             </div>
-            <div class="model-card">
+            
+             <div class="model-card">
                 <img src="assets/ronin.jpg" alt="Ronin" onerror="this.src='https://placehold.co/600x400?text=Ronin'">
                 <div class="model-info">
                     <h3>TVS Ronin</h3>
+                    <p>225cc | Modern Retro | Scrambler</p>
                     <a href="models/ronin.html" class="btn-view">View Specs</a>
                 </div>
             </div>
-            <div class="model-card">
+
+             <div class="model-card">
                 <img src="assets/iqube.jpg" alt="iQube" onerror="this.src='https://placehold.co/600x400?text=iQube'">
                 <div class="model-info">
                     <h3>TVS iQube Electric</h3>
+                    <p>100km Range | Smart | Silent</p>
                     <a href="models/iqube.html" class="btn-view">View Specs</a>
                 </div>
             </div>
+
         </div>
     </section>
 
