--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <div class="top-bar">
         <span>📍 Bidarahalli, Bangalore - 49</span>
-        <span>📞 +91 99649 46512</span>
+        <span>📞 +91 99649 46512 | tirumalatvs716@gmail.com</span>
     </div>
 
     <nav class="nav-container">
@@ -35,39 +35,44 @@
         <a href="contacts.html" class="action-btn">💬 General Enquiry</a>
     </div>
 
-    <section>
-        <h2 class="section-title">Explore by Category</h2>
-        <p class="section-subtitle">Find the perfect ride that matches your lifestyle</p>
-        
-        <div class="category-grid">
-            <div class="category-card" onclick="window.location.href='models.html'">
-                <div style="font-size: 2.5rem;">🛵</div>
-                <h3>Scooters</h3>
-                <p>Jupiter, Ntorq, Zest</p>
+    <section class="world-of-tvs">
+        <div class="world-container">
+            <div class="world-col-left">
+                <h3>Championing Progress</h3>
+                <h4>Welcome to Tirumala TVS Bidarahalli</h4>
+                <p>We are committed to being a socially responsible, and leading manufacturer of high value for money, environmentally friendly, lifetime personal transportation products.</p>
+                <p>Tirumala TVS Bidarahalli is proud to bring these internationally aspirational products to your doorstep, with a commitment to trust and exceptional customer service.</p>
             </div>
-            <div class="category-card" onclick="window.location.href='models.html'">
-                <div style="font-size: 2.5rem;">🏍</div>
-                <h3>Motorcycles</h3>
-                <p>Apache, Raider, Ronin</p>
-            </div>
-            <div class="category-card" onclick="window.location.href='models.html'">
-                <div style="font-size: 2.5rem;">⚡</div>
-                <h3>Electric</h3>
-                <p>iQube Series</p>
-            </div>
-            <div class="category-card" onclick="window.location.href='models.html'">
-                <div style="font-size: 2.5rem;">🔧</div>
-                <h3>Mopeds</h3>
-                <p>XL100 Heavy Duty</p>
+            <div class="world-col-right">
+                <div class="world-point">
+                    <div style="font-size: 1.5rem;">✔️</div>
+                    <h4>Over 50 million Vehicles</h4>
+                    <p>Celebrated globally.</p>
+                </div>
+                <div class="world-point">
+                    <div style="font-size: 1.5rem;">✔️</div>
+                    <h4>Presence in 80+ countries</h4>
+                    <p>Global trust.</p>
+                </div>
+                <div class="world-point">
+                    <div style="font-size: 1.5rem;">✔️</div>
+                    <h4>A vehicle for everyone</h4>
+                    <p>Largest portfolio.</p>
+                </div>
+                <div class="world-point">
+                    <div style="font-size: 1.5rem;">✔️</div>
+                    <h4>Industry Leader TVSM</h4>
+                    <p>Innovation first.</p>
+                </div>
             </div>
         </div>
     </section>
 
-    <section style="background-color: var(--light-grey);">
+    <section style="background-color: white;">
         <h2 class="section-title">Latest Launches</h2>
         <div class="models-grid">
             <div class="model-card">
-                <img src="assets/jupiter110.jpg" alt="Jupiter 110" onerror="this.src='https://placehold.co/600x400?text=Jupiter+110'">
+                <img src="assets/jupiter110.jpg" alt="Jupiter 110" onerror="this.src='https://placehold.co/600x400?text=Jupiter'">
                 <div class="model-info">
                     <h3>New TVS Jupiter 110</h3>
                     <p>New 113cc Engine with iGO Assist.</p>
@@ -78,7 +83,7 @@
                 <img src="assets/raider.jpg" alt="Raider" onerror="this.src='https://placehold.co/600x400?text=Raider'">
                 <div class="model-info">
                     <h3>TVS Raider 125</h3>
-                    <p>The wicked ride. Best in class power.</p>
+                    <p>The wicked ride. Commuter of the year.</p>
                     <a href="models/raider.html" class="btn-view">View Details</a>
                 </div>
             </div>
@@ -93,11 +98,42 @@
         </div>
     </section>
 
+    <section style="background-color: var(--light-grey);">
+        <h2 class="section-title">Happy Riders</h2>
+        <p class="section-subtitle">See what our customers say about their new rides</p>
+        <div class="testimonials-grid">
+            <div class="testimonial-card">
+                <div class="star-rating">★★★★★</div>
+                <p>"I bought the new Jupiter 110 from Tirumala TVS. The staff was very helpful, and the bike's mileage is excellent."</p>
+                <div class="customer-info">
+                    <div style="background: #ccc; width: 40px; height: 40px; border-radius: 50%;"></div>
+                    <div class="customer-details"><h4>Rahul Kumar</h4><span>Jupiter Owner</span></div>
+                </div>
+            </div>
+            <div class="testimonial-card">
+                <div class="star-rating">★★★★★</div>
+                <p>"The TVS Raider 125 is a beast! The sporty look is amazing. Delivery was smooth and fast."</p>
+                <div class="customer-info">
+                    <div style="background: #ccc; width: 40px; height: 40px; border-radius: 50%;"></div>
+                    <div class="customer-details"><h4>Arjun Sharma</h4><span>Raider Owner</span></div>
+                </div>
+            </div>
+            <div class="testimonial-card">
+                <div class="star-rating">★★★★★</div>
+                <p>"Best service experience in Bidarahalli. Mechanics are knowledgeable and very polite."</p>
+                <div class="customer-info">
+                    <div style="background: #ccc; width: 40px; height: 40px; border-radius: 50%;"></div>
+                    <div class="customer-details"><h4>Vikram M.</h4><span>Apache Owner</span></div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <footer>
         <div class="footer-container">
             <div class="footer-col">
                 <h4>Tirumala TVS</h4>
-                <p>Authorized Main Dealer. Your trusted partner for Sales & Service.</p>
+                <p>Authorized Main Dealer. Your trusted partner for TVS Sales & Service.</p>
             </div>
             <div class="footer-col">
                 <h4>Quick Links</h4>
