--- a/models.html
+++ b/models.html
@@ -17,11 +17,9 @@
         </div>
     </nav>
 
-    <section class="info-section">
-        <div class="section-head">
-            <h2>Our Vehicle Collection</h2>
-            <p>Explore the complete range of TVS Motorcycles and Scooters</p>
-        </div>
+    <section style="background-color: white;">
+        <h2 class="section-title">Our Vehicle Collection</h2>
+        <p class="section-subtitle">Explore the complete range of TVS Motorcycles and Scooters</p>
 
         <div class="models-grid">
             
@@ -94,6 +92,15 @@
                     <h3>TVS iQube Electric</h3>
                     <p>100km Range | Smart | Silent</p>
                     <a href="models/iqube.html" class="btn-view">View Specs</a>
+                </div>
+            </div>
+
+             <div class="model-card">
+                <img src="assets/apache160.jpg" alt="Apache" onerror="this.src='https://placehold.co/600x400?text=Apache'">
+                <div class="model-info">
+                    <h3>Apache RTR 160 4V</h3>
+                    <p>160cc | 17.55 PS | 3 Ride Modes</p>
+                    <a href="models/apache160.html" class="btn-view">View Specs</a>
                 </div>
             </div>
 
