--- a/index.html
+++ b/index.html
@@ -100,11 +100,11 @@
 
     <section style="background-color: var(--light-grey);">
         <h2 class="section-title">Happy Riders</h2>
-        <p class="section-subtitle">See what our customers say about their new rides</p>
+        <p class="section-subtitle">See what our customers say</p>
         <div class="testimonials-grid">
             <div class="testimonial-card">
                 <div class="star-rating">★★★★★</div>
-                <p>"I bought the new Jupiter 110 from Tirumala TVS. The staff was very helpful, and the bike's mileage is excellent."</p>
+                <p>"I bought the new Jupiter 110 from Tirumala TVS. The staff was very helpful."</p>
                 <div class="customer-info">
                     <div style="background: #ccc; width: 40px; height: 40px; border-radius: 50%;"></div>
                     <div class="customer-details"><h4>Rahul Kumar</h4><span>Jupiter Owner</span></div>
@@ -112,7 +112,7 @@
             </div>
             <div class="testimonial-card">
                 <div class="star-rating">★★★★★</div>
-                <p>"The TVS Raider 125 is a beast! The sporty look is amazing. Delivery was smooth and fast."</p>
+                <p>"The TVS Raider 125 is a beast! The sporty look is amazing."</p>
                 <div class="customer-info">
                     <div style="background: #ccc; width: 40px; height: 40px; border-radius: 50%;"></div>
                     <div class="customer-details"><h4>Arjun Sharma</h4><span>Raider Owner</span></div>
@@ -120,7 +120,7 @@
             </div>
             <div class="testimonial-card">
                 <div class="star-rating">★★★★★</div>
-                <p>"Best service experience in Bidarahalli. Mechanics are knowledgeable and very polite."</p>
+                <p>"Best service experience in Bidarahalli. Mechanics are knowledgeable."</p>
                 <div class="customer-info">
                     <div style="background: #ccc; width: 40px; height: 40px; border-radius: 50%;"></div>
                     <div class="customer-details"><h4>Vikram M.</h4><span>Apache Owner</span></div>
@@ -133,7 +133,7 @@
         <div class="footer-container">
             <div class="footer-col">
                 <h4>Tirumala TVS</h4>
-                <p>Authorized Main Dealer. Your trusted partner for TVS Sales & Service.</p>
+                <p>Authorized Main Dealer. Your trusted partner for Sales & Service.</p>
             </div>
             <div class="footer-col">
                 <h4>Quick Links</h4>
