--- a/models.html
+++ b/models.html
@@ -17,93 +17,85 @@
         </div>
     </nav>
 
-    <section style="background-color: white;">
-        <h2 class="section-title">Our Vehicle Collection</h2>
-        <p class="section-subtitle">Explore the complete range of TVS Motorcycles and Scooters</p>
+    <section class="info-section">
+        <div class="section-head">
+            <h2>Our Vehicle Collection</h2>
+            <p>Explore the complete range of TVS Motorcycles and Scooters</p>
+        </div>
 
         <div class="models-grid">
-            
             <div class="model-card">
                 <img src="assets/zest.jpg" alt="Zest" onerror="this.src='https://placehold.co/600x400?text=Zest'">
                 <div class="model-info">
                     <h3>TVS Zest 110</h3>
-                    <p>110cc | Lightweight | 19L Storage</p>
+                    <p>110cc | Lightweight</p>
                     <a href="models/zest110.html" class="btn-view">View Specs</a>
                 </div>
             </div>
-
             <div class="model-card">
                 <img src="assets/jupiter110.jpg" alt="Jupiter 110" onerror="this.src='https://placehold.co/600x400?text=Jupiter+110'">
                 <div class="model-info">
                     <h3>New TVS Jupiter 110</h3>
-                    <p>113cc | iGO Assist | Digital Cluster</p>
+                    <p>113cc | iGO Assist</p>
                     <a href="models/jupiter113.html" class="btn-view">View Specs</a>
                 </div>
             </div>
-
             <div class="model-card">
                 <img src="assets/jupiter125.jpg" alt="Jupiter 125" onerror="this.src='https://placehold.co/600x400?text=Jupiter+125'">
                 <div class="model-info">
                     <h3>TVS Jupiter 125</h3>
-                    <p>125cc | 2 Helmet Storage | Metal Body</p>
+                    <p>125cc | 2 Helmet Storage</p>
                     <a href="models/jupiter125.html" class="btn-view">View Specs</a>
                 </div>
             </div>
-
             <div class="model-card">
                 <img src="assets/raider.jpg" alt="Raider" onerror="this.src='https://placehold.co/600x400?text=Raider'">
                 <div class="model-info">
                     <h3>TVS Raider 125</h3>
-                    <p>125cc | TFT Display | 5.9s 0-60</p>
+                    <p>125cc | TFT Display</p>
                     <a href="models/raider.html" class="btn-view">View Specs</a>
                 </div>
             </div>
-
             <div class="model-card">
                 <img src="assets/ntorq.jpg" alt="Ntorq" onerror="this.src='https://placehold.co/600x400?text=Ntorq'">
                 <div class="model-info">
                     <h3>TVS Ntorq 125</h3>
-                    <p>125cc | Bluetooth | Race Tuned</p>
+                    <p>125cc | Bluetooth</p>
                     <a href="models/ntorq125.html" class="btn-view">View Specs</a>
                 </div>
             </div>
-
             <div class="model-card">
                 <img src="assets/xl100.jpg" alt="XL100" onerror="this.src='https://placehold.co/600x400?text=XL100'">
                 <div class="model-info">
                     <h3>TVS XL100</h3>
-                    <p>Heavy Duty | Multi-Utility | i-Touch</p>
+                    <p>Heavy Duty | i-Touch</p>
                     <a href="models/xl100.html" class="btn-view">View Specs</a>
                 </div>
             </div>
-            
-             <div class="model-card">
+            <div class="model-card">
                 <img src="assets/ronin.jpg" alt="Ronin" onerror="this.src='https://placehold.co/600x400?text=Ronin'">
                 <div class="model-info">
                     <h3>TVS Ronin</h3>
-                    <p>225cc | Modern Retro | Scrambler</p>
+                    <p>225cc | Scrambler</p>
                     <a href="models/ronin.html" class="btn-view">View Specs</a>
                 </div>
             </div>
-
-             <div class="model-card">
+            <div class="model-card">
                 <img src="assets/iqube.jpg" alt="iQube" onerror="this.src='https://placehold.co/600x400?text=iQube'">
                 <div class="model-info">
                     <h3>TVS iQube Electric</h3>
-                    <p>100km Range | Smart | Silent</p>
+                    <p>100km Range | Smart</p>
                     <a href="models/iqube.html" class="btn-view">View Specs</a>
                 </div>
             </div>
-
-             <div class="model-card">
+            <div class="model-card">
                 <img src="assets/apache160.jpg" alt="Apache" onerror="this.src='https://placehold.co/600x400?text=Apache'">
                 <div class="model-info">
                     <h3>Apache RTR 160 4V</h3>
-                    <p>160cc | 17.55 PS | 3 Ride Modes</p>
+                    <p>160cc | 3 Ride Modes</p>
                     <a href="models/apache160.html" class="btn-view">View Specs</a>
                 </div>
             </div>
-
         </div>
     </section>
 
