--- a/index.html
+++ b/index.html
@@ -1,155 +1,59 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tirumala TVS Bidarahalli | Authorized Main Dealer</title>
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-
-    <div class="top-bar">
-        <span>📍 Bidarahalli, Bangalore - 49</span>
-        <span>📞 +91 99649 46512 | tirumalatvs716@gmail.com</span>
+<div class="footer-contact-bar">
+        <div class="contact-item">
+            <div class="contact-icon-circle">✉️</div>
+            <a href="mailto:tirumalatvs716@gmail.com" style="color: white;">tirumalatvs716@gmail.com</a>
+        </div>
+        <div class="contact-item">
+            <div class="contact-icon-circle">📞</div>
+            <a href="tel:+919964946512" style="color: white;">+91 99649 46512</a>
+        </div>
     </div>
 
-    <nav class="nav-container">
-        <a href="index.html" class="logo"><h1>Tirumala <span>TVS</span></h1></a>
-        <div class="nav-links">
-            <a href="index.html">Home</a>
-            <a href="models.html">Inventory</a>
-            <a href="contacts.html">Service</a>
-            <a href="contacts.html" style="color: var(--tvs-red);">Contact Us</a>
-        </div>
-    </nav>
-
-    <section class="hero">
-        <h2>Experience the New TVS</h2>
-        <p>Your Trusted Authorized Dealership in Bidarahalli, Bangalore.</p>
-        <a href="models.html" class="hero-btn">View Latest Bikes</a>
-    </section>
-
-    <div class="action-bar">
-        <a href="contacts.html" class="action-btn">📅 Book Service</a>
-        <a href="contacts.html" class="action-btn">🏍 Book Test Ride</a>
-        <a href="contacts.html" class="action-btn">💬 General Enquiry</a>
-    </div>
-
-    <section class="world-of-tvs">
-        <div class="world-container">
-            <div class="world-col-left">
-                <h3>Championing Progress</h3>
-                <h4>Welcome to Tirumala TVS Bidarahalli</h4>
-                <p>We are committed to being a socially responsible, and leading manufacturer of high value for money, environmentally friendly, lifetime personal transportation products.</p>
-                <p>Tirumala TVS Bidarahalli is proud to bring these internationally aspirational products to your doorstep, with a commitment to trust and exceptional customer service.</p>
-            </div>
-            <div class="world-col-right">
-                <div class="world-point">
-                    <div style="font-size: 1.5rem;">✔️</div>
-                    <h4>Over 50 million Vehicles</h4>
-                    <p>Celebrated globally.</p>
-                </div>
-                <div class="world-point">
-                    <div style="font-size: 1.5rem;">✔️</div>
-                    <h4>Presence in 80+ countries</h4>
-                    <p>Global trust.</p>
-                </div>
-                <div class="world-point">
-                    <div style="font-size: 1.5rem;">✔️</div>
-                    <h4>A vehicle for everyone</h4>
-                    <p>Largest portfolio.</p>
-                </div>
-                <div class="world-point">
-                    <div style="font-size: 1.5rem;">✔️</div>
-                    <h4>Industry Leader TVSM</h4>
-                    <p>Innovation first.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section style="background-color: white;">
-        <h2 class="section-title">Latest Launches</h2>
-        <div class="models-grid">
-            <div class="model-card">
-                <img src="assets/jupiter110.jpg" alt="Jupiter 110" onerror="this.src='https://placehold.co/600x400?text=Jupiter'">
-                <div class="model-info">
-                    <h3>New TVS Jupiter 110</h3>
-                    <p>New 113cc Engine with iGO Assist.</p>
-                    <a href="models/jupiter113.html" class="btn-view">View Details</a>
-                </div>
-            </div>
-            <div class="model-card">
-                <img src="assets/raider.jpg" alt="Raider" onerror="this.src='https://placehold.co/600x400?text=Raider'">
-                <div class="model-info">
-                    <h3>TVS Raider 125</h3>
-                    <p>The wicked ride. Commuter of the year.</p>
-                    <a href="models/raider.html" class="btn-view">View Details</a>
-                </div>
-            </div>
-            <div class="model-card">
-                <img src="assets/ronin.jpg" alt="Ronin" onerror="this.src='https://placehold.co/600x400?text=Ronin'">
-                <div class="model-info">
-                    <h3>TVS Ronin</h3>
-                    <p>Modern-Retro Scrambler.</p>
-                    <a href="models/ronin.html" class="btn-view">View Details</a>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section style="background-color: var(--light-grey);">
-        <h2 class="section-title">Happy Riders</h2>
-        <p class="section-subtitle">See what our customers say</p>
-        <div class="testimonials-grid">
-            <div class="testimonial-card">
-                <div class="star-rating">★★★★★</div>
-                <p>"I bought the new Jupiter 110 from Tirumala TVS. The staff was very helpful."</p>
-                <div class="customer-info">
-                    <div style="background: #ccc; width: 40px; height: 40px; border-radius: 50%;"></div>
-                    <div class="customer-details"><h4>Rahul Kumar</h4><span>Jupiter Owner</span></div>
-                </div>
-            </div>
-            <div class="testimonial-card">
-                <div class="star-rating">★★★★★</div>
-                <p>"The TVS Raider 125 is a beast! The sporty look is amazing."</p>
-                <div class="customer-info">
-                    <div style="background: #ccc; width: 40px; height: 40px; border-radius: 50%;"></div>
-                    <div class="customer-details"><h4>Arjun Sharma</h4><span>Raider Owner</span></div>
-                </div>
-            </div>
-            <div class="testimonial-card">
-                <div class="star-rating">★★★★★</div>
-                <p>"Best service experience in Bidarahalli. Mechanics are knowledgeable."</p>
-                <div class="customer-info">
-                    <div style="background: #ccc; width: 40px; height: 40px; border-radius: 50%;"></div>
-                    <div class="customer-details"><h4>Vikram M.</h4><span>Apache Owner</span></div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <footer>
-        <div class="footer-container">
-            <div class="footer-col">
-                <h4>Tirumala TVS</h4>
-                <p>Authorized Main Dealer. Your trusted partner for Sales & Service.</p>
-            </div>
-            <div class="footer-col">
+    <footer class="main-footer">
+        <div class="footer-grid">
+            <div class="footer-column">
                 <h4>Quick Links</h4>
                 <ul>
-                    <li><a href="contacts.html">Book Service</a></li>
-                    <li><a href="contacts.html">Book Test Ride</a></li>
+                    <li><a href="index.html">About Us</a></li>
+                    <li><a href="contacts.html">Contact Us</a></li>
+                    <li><a href="contacts.html">Book a Service Appointment</a></li>
+                    <li><a href="contacts.html">Book a Test Drive</a></li>
                 </ul>
             </div>
-            <div class="footer-col">
-                <h4>Contact</h4>
-                <p>Bidarahalli, Bangalore - 49</p>
-                <p>+91 99649 46512</p>
+
+            <div class="footer-column">
+                <h4>Models</h4>
+                <ul>
+                    <li><a href="models.html">Motorcycles</a></li>
+                    <li><a href="models.html">Scooters</a></li>
+                    <li><a href="models.html">Mopeds</a></li>
+                    <li><a href="models.html">Electric</a></li>
+                </ul>
+            </div>
+
+            <div class="footer-column">
+                <h4>Showrooms</h4>
+                <ul>
+                    <li><a href="#">Tirumala TVS Bidarahalli</a></li>
+                    <li><a href="#">Authorized Main Dealer</a></li>
+                    <li><a href="https://goo.gl/maps/YOUR_MAP_LINK">Locate on Map 📍</a></li>
+                </ul>
             </div>
         </div>
-        <p style="margin-top: 30px;">&copy; 2024 Tirumala TVS Bidarahalli.</p>
     </footer>
+
+    <div class="copyright-bar">
+        <div>
+            Copyright © 2025 Tirumala TVS Bidarahalli. All rights reserved.
+        </div>
+        <div class="social-follow">
+            FOLLOW US : 
+            <a href="#" style="font-size: 1.2rem;">📘</a> <a href="#" style="font-size: 1.2rem;">📷</a> </div>
+    </div>
+
+    <a href="https://wa.me/919964946512" class="whatsapp-float" target="_blank">
+        💬
+    </a>
 
 </body>
 </html>
