--- a/index.html
+++ b/index.html
@@ -1,4 +1,94 @@
-<div class="footer-contact-bar">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tirumala TVS Bidarahalli | Authorized Main Dealer</title>
+    <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+
+    <div class="top-bar">
+        <span>📍 Bidarahalli, Bangalore - 49</span>
+        <span>📞 +91 99649 46512 | tirumalatvs716@gmail.com</span>
+    </div>
+
+    <nav class="nav-container">
+        <a href="index.html" class="logo"><h1>Tirumala <span>TVS</span></h1></a>
+        <div class="nav-links">
+            <a href="index.html">Home</a>
+            <a href="models.html">Inventory</a>
+            <a href="contacts.html">Service</a>
+            <a href="contacts.html" style="color: var(--tvs-red);">Contact Us</a>
+        </div>
+    </nav>
+
+    <section class="hero">
+        <h2>Experience the New TVS</h2>
+        <p>Your Trusted Authorized Dealership in Bidarahalli, Bangalore.</p>
+        <a href="models.html" class="hero-btn">View Latest Bikes</a>
+    </section>
+
+    <div class="action-bar">
+        <a href="contacts.html" class="action-btn">📅 Book Service</a>
+        <a href="contacts.html" class="action-btn">🏍 Book Test Ride</a>
+        <a href="contacts.html" class="action-btn">💬 General Enquiry</a>
+    </div>
+
+    <section class="brand-legacy">
+        <h2 style="font-size: 2.5rem; margin-bottom: 10px;">Welcome to Tirumala TVS</h2>
+        <p>We are committed to being a socially responsible and leading manufacturer.</p>
+        
+        <div class="brand-grid">
+            <div class="brand-item">
+                <span class="brand-icon">✔️</span>
+                <h3>Over 50 Million Vehicles</h3>
+                <p>Celebrated globally on the road.</p>
+            </div>
+            <div class="brand-item">
+                <span class="brand-icon">✔️</span>
+                <h3>Presence in 80+ Countries</h3>
+                <p>Bringing value to customers worldwide.</p>
+            </div>
+            <div class="brand-item">
+                <span class="brand-icon">✔️</span>
+                <h3>A Vehicle for Everyone</h3>
+                <p>Largest portfolio from mopeds to premium bikes.</p>
+            </div>
+        </div>
+    </section>
+
+    <section style="background-color: var(--light-grey);">
+        <h2 class="section-title">Latest Launches</h2>
+        <div class="models-grid">
+            <div class="model-card">
+                <img src="assets/jupiter110.jpg" alt="Jupiter 110" onerror="this.src='https://placehold.co/600x400?text=Jupiter'">
+                <div class="model-info">
+                    <h3>New TVS Jupiter 110</h3>
+                    <p>New 113cc Engine with iGO Assist.</p>
+                    <a href="models/jupiter113.html" class="btn-view">View Details</a>
+                </div>
+            </div>
+            <div class="model-card">
+                <img src="assets/raider.jpg" alt="Raider" onerror="this.src='https://placehold.co/600x400?text=Raider'">
+                <div class="model-info">
+                    <h3>TVS Raider 125</h3>
+                    <p>The wicked ride. Commuter of the year.</p>
+                    <a href="models/raider.html" class="btn-view">View Details</a>
+                </div>
+            </div>
+            <div class="model-card">
+                <img src="assets/zest.jpg" alt="Zest" onerror="this.src='https://placehold.co/600x400?text=Zest'">
+                <div class="model-info">
+                    <h3>TVS Zest 110</h3>
+                    <p>Live Full. Live Free.</p>
+                    <a href="models/zest110.html" class="btn-view">View Details</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <div class="footer-contact-bar">
         <div class="contact-item">
             <div class="contact-icon-circle">✉️</div>
             <a href="mailto:tirumalatvs716@gmail.com" style="color: white;">tirumalatvs716@gmail.com</a>
@@ -16,44 +106,33 @@
                 <ul>
                     <li><a href="index.html">About Us</a></li>
                     <li><a href="contacts.html">Contact Us</a></li>
-                    <li><a href="contacts.html">Book a Service Appointment</a></li>
-                    <li><a href="contacts.html">Book a Test Drive</a></li>
+                    <li><a href="contacts.html">Book Service</a></li>
                 </ul>
             </div>
-
             <div class="footer-column">
                 <h4>Models</h4>
                 <ul>
                     <li><a href="models.html">Motorcycles</a></li>
                     <li><a href="models.html">Scooters</a></li>
-                    <li><a href="models.html">Mopeds</a></li>
                     <li><a href="models.html">Electric</a></li>
                 </ul>
             </div>
-
             <div class="footer-column">
-                <h4>Showrooms</h4>
+                <h4>Showroom</h4>
                 <ul>
                     <li><a href="#">Tirumala TVS Bidarahalli</a></li>
-                    <li><a href="#">Authorized Main Dealer</a></li>
-                    <li><a href="https://goo.gl/maps/YOUR_MAP_LINK">Locate on Map 📍</a></li>
+                    <li><a href="#">Bangalore - 560049</a></li>
                 </ul>
             </div>
         </div>
     </footer>
 
     <div class="copyright-bar">
-        <div>
-            Copyright © 2025 Tirumala TVS Bidarahalli. All rights reserved.
-        </div>
-        <div class="social-follow">
-            FOLLOW US : 
-            <a href="#" style="font-size: 1.2rem;">📘</a> <a href="#" style="font-size: 1.2rem;">📷</a> </div>
+        <div>Copyright © 2025 Tirumala TVS Bidarahalli.</div>
+        <div>FOLLOW US: 📘 📷</div>
     </div>
 
-    <a href="https://wa.me/919964946512" class="whatsapp-float" target="_blank">
-        💬
-    </a>
+    <a href="https://wa.me/919964946512" class="whatsapp-float" target="_blank">💬</a>
 
 </body>
 </html>
