--- a/models.html
+++ b/models.html
@@ -28,31 +28,20 @@
                 <img src="assets/zest.jpg" alt="Zest" onerror="this.src='https://placehold.co/600x400?text=Zest'">
                 <div class="model-info">
                     <h3>TVS Zest 110</h3>
-                    <p>110cc | Lightweight</p>
                     <a href="models/zest110.html" class="btn-view">View Specs</a>
                 </div>
             </div>
             <div class="model-card">
-                <img src="assets/jupiter110.jpg" alt="Jupiter 110" onerror="this.src='https://placehold.co/600x400?text=Jupiter+110'">
+                <img src="assets/jupiter110.jpg" alt="Jupiter" onerror="this.src='https://placehold.co/600x400?text=Jupiter'">
                 <div class="model-info">
                     <h3>New TVS Jupiter 110</h3>
-                    <p>113cc | iGO Assist</p>
                     <a href="models/jupiter113.html" class="btn-view">View Specs</a>
-                </div>
-            </div>
-            <div class="model-card">
-                <img src="assets/jupiter125.jpg" alt="Jupiter 125" onerror="this.src='https://placehold.co/600x400?text=Jupiter+125'">
-                <div class="model-info">
-                    <h3>TVS Jupiter 125</h3>
-                    <p>125cc | 2 Helmet Storage</p>
-                    <a href="models/jupiter125.html" class="btn-view">View Specs</a>
                 </div>
             </div>
             <div class="model-card">
                 <img src="assets/raider.jpg" alt="Raider" onerror="this.src='https://placehold.co/600x400?text=Raider'">
                 <div class="model-info">
                     <h3>TVS Raider 125</h3>
-                    <p>125cc | TFT Display</p>
                     <a href="models/raider.html" class="btn-view">View Specs</a>
                 </div>
             </div>
@@ -60,7 +49,6 @@
                 <img src="assets/ntorq.jpg" alt="Ntorq" onerror="this.src='https://placehold.co/600x400?text=Ntorq'">
                 <div class="model-info">
                     <h3>TVS Ntorq 125</h3>
-                    <p>125cc | Bluetooth</p>
                     <a href="models/ntorq125.html" class="btn-view">View Specs</a>
                 </div>
             </div>
@@ -68,38 +56,26 @@
                 <img src="assets/xl100.jpg" alt="XL100" onerror="this.src='https://placehold.co/600x400?text=XL100'">
                 <div class="model-info">
                     <h3>TVS XL100</h3>
-                    <p>Heavy Duty | i-Touch</p>
                     <a href="models/xl100.html" class="btn-view">View Specs</a>
-                </div>
-            </div>
-            <div class="model-card">
-                <img src="assets/ronin.jpg" alt="Ronin" onerror="this.src='https://placehold.co/600x400?text=Ronin'">
-                <div class="model-info">
-                    <h3>TVS Ronin</h3>
-                    <p>225cc | Scrambler</p>
-                    <a href="models/ronin.html" class="btn-view">View Specs</a>
                 </div>
             </div>
             <div class="model-card">
                 <img src="assets/iqube.jpg" alt="iQube" onerror="this.src='https://placehold.co/600x400?text=iQube'">
                 <div class="model-info">
-                    <h3>TVS iQube Electric</h3>
-                    <p>100km Range | Smart</p>
+                    <h3>TVS iQube</h3>
                     <a href="models/iqube.html" class="btn-view">View Specs</a>
-                </div>
-            </div>
-            <div class="model-card">
-                <img src="assets/apache160.jpg" alt="Apache" onerror="this.src='https://placehold.co/600x400?text=Apache'">
-                <div class="model-info">
-                    <h3>Apache RTR 160 4V</h3>
-                    <p>160cc | 3 Ride Modes</p>
-                    <a href="models/apache160.html" class="btn-view">View Specs</a>
                 </div>
             </div>
         </div>
     </section>
 
-    <footer><p>&copy; 2024 Tirumala TVS Bidarahalli.</p></footer>
+    <div class="footer-contact-bar">
+        <div class="contact-item">✉️ tirumalatvs716@gmail.com</div>
+        <div class="contact-item">📞 +91 99649 46512</div>
+    </div>
+    <div class="copyright-bar">
+        <div>Copyright © 2025 Tirumala TVS Bidarahalli.</div>
+    </div>
 
 </body>
 </html>
