--- a/index.html
+++ b/index.html
@@ -9,21 +9,20 @@
 <body>
 
     <div class="header-top">
-        <a href="#contact" class="btn-header-action">Book Service</a>
-        <a href="#contact" class="btn-header-action">Get Quote</a>
-        <a href="#contact" class="btn-header-action">Test Drive</a>
+        <a href="#contact" class="btn-header-action">Book Service Appointment</a>
+        <a href="#contact" class="btn-header-action">Get Quotation</a>
+        <a href="#contact" class="btn-header-action">Book Test Drive</a>
     </div>
 
     <nav class="main-nav-container">
         <a href="index.html" class="logo-text">Tirumala <span>TVS</span></a>
-        
         <div class="menu-toggle" onclick="toggleMenu()">☰</div>
-
         <div class="nav-menu" id="navMenu">
             <a href="index.html">HOME</a>
             <a href="#about">ABOUT</a>
-            <a href="models.html">VEHICLES</a>
-            <a href="#contact">SERVICES</a>
+            <a href="models.html">MOTORCYCLES</a>
+            <a href="models.html#scooters">SCOOTERS</a>
+            <a href="models.html#electric">ELECTRIC</a>
             <a href="#contact">CONTACT</a>
         </div>
     </nav>
@@ -45,19 +44,13 @@
         <p>We are committed to being a socially responsible and leading manufacturer.</p>
         <div class="brand-grid">
             <div class="brand-item">
-                <span class="brand-icon">✔️</span>
-                <h3>50M+ Vehicles</h3>
-                <p>Celebrated globally.</p>
+                <span class="brand-icon">✔️</span><h3>50M+ Vehicles</h3><p>Celebrated globally.</p>
             </div>
             <div class="brand-item">
-                <span class="brand-icon">✔️</span>
-                <h3>80+ Countries</h3>
-                <p>Global trust.</p>
+                <span class="brand-icon">✔️</span><h3>80+ Countries</h3><p>Global trust.</p>
             </div>
             <div class="brand-item">
-                <span class="brand-icon">✔️</span>
-                <h3>Industry Leader</h3>
-                <p>Innovation first.</p>
+                <span class="brand-icon">✔️</span><h3>Industry Leader</h3><p>Innovation first.</p>
             </div>
         </div>
     </section>
@@ -67,27 +60,15 @@
         <div class="models-grid">
             <div class="model-card">
                 <img src="assets/jupiter110.jpg" alt="Jupiter 110" onerror="this.src='https://placehold.co/600x400?text=Jupiter'">
-                <div class="model-info">
-                    <h3>New TVS Jupiter 110</h3>
-                    <p>New 113cc Engine with iGO Assist.</p>
-                    <a href="models/jupiter113.html" class="btn-view">View Details</a>
-                </div>
+                <div class="model-info"><h3>New TVS Jupiter 110</h3><p>New 113cc Engine with iGO Assist.</p><a href="models/jupiter113.html" class="btn-view">View Details</a></div>
             </div>
             <div class="model-card">
                 <img src="assets/raider.jpg" alt="Raider" onerror="this.src='https://placehold.co/600x400?text=Raider'">
-                <div class="model-info">
-                    <h3>TVS Raider 125</h3>
-                    <p>The wicked ride. Commuter of the year.</p>
-                    <a href="models/raider.html" class="btn-view">View Details</a>
-                </div>
+                <div class="model-info"><h3>TVS Raider 125</h3><p>The wicked ride. Commuter of the year.</p><a href="models/raider.html" class="btn-view">View Details</a></div>
             </div>
             <div class="model-card">
                 <img src="assets/ronin.jpg" alt="Ronin" onerror="this.src='https://placehold.co/600x400?text=Ronin'">
-                <div class="model-info">
-                    <h3>TVS Ronin</h3>
-                    <p>Modern-Retro Scrambler.</p>
-                    <a href="models/ronin.html" class="btn-view">View Details</a>
-                </div>
+                <div class="model-info"><h3>TVS Ronin</h3><p>Modern-Retro Scrambler.</p><a href="models/ronin.html" class="btn-view">View Details</a></div>
             </div>
         </div>
     </section>
@@ -99,18 +80,17 @@
             <div class="testimonial-card">
                 <div class="star-rating">★★★★★</div>
                 <p>"The mileage is impressive for city rides, giving around 55 kmpl. Comfortable seat."</p>
-                <div class="customer-info">
-                    <div style="background: #ccc; width: 40px; height: 40px; border-radius: 50%;"></div>
-                    <div class="customer-details"><h4>Usama Faruqui</h4><span>Jupiter Owner</span></div>
-                </div>
+                <div class="customer-info"><div style="background:#ccc;width:40px;height:40px;border-radius:50%;"></div><div class="customer-details"><h4>Usama Faruqui</h4><span>Jupiter Owner</span></div></div>
             </div>
             <div class="testimonial-card">
                 <div class="star-rating">★★★★★</div>
                 <p>"I'm surprised to see the mileage! Getting nearly 60+ kmpl on highways."</p>
-                <div class="customer-info">
-                    <div style="background: #ccc; width: 40px; height: 40px; border-radius: 50%;"></div>
-                    <div class="customer-details"><h4>Safik Ahmed</h4><span>Raider Owner</span></div>
-                </div>
+                <div class="customer-info"><div style="background:#ccc;width:40px;height:40px;border-radius:50%;"></div><div class="customer-details"><h4>Safik Ahmed</h4><span>Raider Owner</span></div></div>
+            </div>
+            <div class="testimonial-card">
+                <div class="star-rating">★★★★★</div>
+                <p>"Best service experience in Bidarahalli. Mechanics are knowledgeable."</p>
+                <div class="customer-info"><div style="background:#ccc;width:40px;height:40px;border-radius:50%;"></div><div class="customer-details"><h4>Vikram M.</h4><span>Apache Owner</span></div></div>
             </div>
         </div>
     </section>
@@ -120,10 +100,8 @@
             <h2 class="section-title" style="text-align: left;">Contact Us</h2>
             <p style="margin-bottom: 30px; color: #666;">Fill the form below to reach us.</p>
             <form action="https://formspree.io/f/YOUR_FORM_ID" method="POST">
-                <label class="form-label">Name *</label>
-                <input type="text" name="name" class="form-input" placeholder="Your fullname" required>
-                <label class="form-label">Phone *</label>
-                <input type="tel" name="phone" class="form-input" placeholder="Your phone number" required>
+                <label class="form-label">Name *</label><input type="text" name="name" class="form-input" placeholder="Your fullname" required>
+                <label class="form-label">Phone *</label><input type="tel" name="phone" class="form-input" placeholder="Your phone number" required>
                 <label class="form-label">Purpose *</label>
                 <select name="purpose" class="form-input" required>
                     <option value="General Enquiry">General Enquiry</option>
@@ -131,8 +109,7 @@
                     <option value="Get Quotation">Get Quotation / Price</option>
                     <option value="Test Drive">Book Test Drive</option>
                 </select>
-                <label class="form-label">Message</label>
-                <textarea name="message" class="form-input" rows="4" placeholder="Vehicle model or specific details..."></textarea>
+                <label class="form-label">Message</label><textarea name="message" class="form-input" rows="4" placeholder="Vehicle details..."></textarea>
                 <button type="submit" class="btn-submit-form">Submit Request</button>
             </form>
         </div>
@@ -143,48 +120,16 @@
         <div class="contact-item">✉️ tirumalatvs716@gmail.com</div>
         <div class="contact-item">📞 +91 99649 46512</div>
     </div>
-
     <footer class="main-footer">
         <div class="footer-grid">
-            <div class="footer-column">
-                <h4>Quick Links</h4>
-                <ul>
-                    <li><a href="#about">About Us</a></li>
-                    <li><a href="#contact">Contact Us</a></li>
-                    <li><a href="#contact">Book Service</a></li>
-                </ul>
-            </div>
-            <div class="footer-column">
-                <h4>Models</h4>
-                <ul>
-                    <li><a href="models.html">Motorcycles</a></li>
-                    <li><a href="models.html">Scooters</a></li>
-                    <li><a href="models.html">Electric</a></li>
-                </ul>
-            </div>
-            <div class="footer-column">
-                <h4>Showroom</h4>
-                <ul>
-                    <li><a href="#">Tirumala TVS Bidarahalli</a></li>
-                    <li><a href="#">Bangalore - 560049</a></li>
-                </ul>
-            </div>
+            <div class="footer-column"><h4>Quick Links</h4><ul><li><a href="index.html">About Us</a></li><li><a href="#contact">Contact Us</a></li><li><a href="#contact">Book Service</a></li></ul></div>
+            <div class="footer-column"><h4>Models</h4><ul><li><a href="models.html">Motorcycles</a></li><li><a href="models.html#scooters">Scooters</a></li><li><a href="models.html#electric">Electric</a></li></ul></div>
+            <div class="footer-column"><h4>Showroom</h4><ul><li><a href="#">Tirumala TVS Bidarahalli</a></li><li><a href="#">Authorized Main Dealer</a></li></ul></div>
         </div>
     </footer>
-
-    <div class="copyright-bar">
-        <div>Copyright © 2025 Tirumala TVS Bidarahalli.</div>
-        <div>FOLLOW US: 📘 📷</div>
-    </div>
-
+    <div class="copyright-bar"><div>Copyright © 2025 Tirumala TVS Bidarahalli.</div></div>
     <a href="https://wa.me/919964946512?text=Hi%20Tirumala%20TVS" class="whatsapp-float" target="_blank">💬</a>
 
-    <script>
-        function toggleMenu() {
-            var menu = document.getElementById("navMenu");
-            menu.classList.toggle("active");
-        }
-    </script>
-
+    <script>function toggleMenu(){document.getElementById("navMenu").classList.toggle("active");}</script>
 </body>
 </html>
